# money-transfer

./: .env.example  Cargo.toml  Makefile
migration/: Cargo.toml
migration/src/: lib.rs  m20231003_223905_user.rs  m20231004_112043_wallet.rs  m20231004_154313_transaction.rs
src/: main.rs
src/dto/: mod.rs  transfers.rs  users.rs
src/entities/: mod.rs  prelude.rs  sea_orm_active_enums.rs  transactions.rs  users.rs  wallets.rs
src/handlers/: mod.rs  transfers.rs  users.rs  wallets.rs  webhooks.rs
src/middlewares/: auth.rs
src/routes/: mod.rs  transfers.rs  users.rs  wallets.rs  webhooks.rs
src/service/: mod.rs  paystack_webhook.rs  transaction_balance.rs
src/utils/: config.rs  email_template.rs  helpers.rs  mod.rs  paystack.rs  send_email.rs
