[package]
name = "money-transfer"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[workspace]
members = [".", "migration"]

[dependencies]
migration = { path = "migration" }
actix-cors = "0.6.4"
actix-web = "4.4.0"
actix-web-httpauth = "0.8.1"
anyhow = "1.0.75"
argonautica = "0.2.0"
chrono = { version = "0.4.31", features = ["serde"] }
dotenv = "0.15.0"
env_logger = "0.10.0"
hmac = "0.12.1"
jwt = "0.16.0"
reqwest = { version = "0.11.22", features = ["json"] }
sea-orm = { version = "0.12.3", features = ["sqlx-mysql", "runtime-async-std-native-tls", "macros"] }
serde = { version = "1.0.188", features = ["derive"] }
serde_json = "1.0.107"
sha2 = "0.10.8"
thiserror = "1.0.49"
tokio = { version = "1.32.0", features = ["full"] }
uuid = { version = "1.4.1", features = ["serde", "v4"] }
rust_decimal = "1.32.0"
