[package]
name = "money-transfer"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[workspace]
members = [".", "migration"]

[dependencies]
migration = { path = "migration" }
actix-cors = "0.6.4"
actix-web = "4.4.0"
actix-web-lab = "0.19"
anyhow = "1.0.75"
argonautica = "0.2.0"
jsonwebtoken = "8.2.0"
chrono = { version = "0.4.31", features = ["serde"] }
dotenv = "0.15.0"
reqwest = { version = "0.11.22", features = ["json"] }
sea-orm = { version = "0.12.3", features = ["sqlx-mysql", "runtime-async-std-native-tls", "macros"] }
serde = { version = "1.0.188", features = ["derive"] }
serde_json = "1.0.107"
thiserror = "1.0.49"
tokio = { version = "1.32.0", features = ["full"] }
uuid = { version = "1.4.1", features = ["serde", "v4"] }
rust_decimal = "1.32.0"
validator = { version = "0.16", features = ["derive"] }
cargo-watch = "8.4.1"
tracing = "0.1"
tracing-appender = "0.2"
tracing-futures = "0.2.5"
tracing-subscriber = "0.3.17"
tracing-actix-web = "0.7"
tracing-bunyan-formatter = "0.3.9"
tracing-log = "0.1.3"
futures = "0.3.4"
lettre = { version = "0.10", default-features = false, features = ["builder", "hostname", "smtp-transport", "tokio1-rustls-tls", "tokio1"] }
async-trait = "0.1.73"
ring = "0.17"
hex = "0.4"
